--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ idna==3.10
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 Jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.0
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -44,8 +45,11 @@ jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kubernetes==32.0.1
 langchain==0.3.25
+langchain-chroma==0.2.4
 langchain-community==0.3.24
 langchain-core==0.3.60
+langchain-huggingface==0.2.0
+langchain-openai==0.3.17
 langchain-text-splitters==0.3.8
 langsmith==0.3.42
 markdown-it-py==3.0.0
@@ -60,6 +64,7 @@ networkx==3.4.2
 numpy==2.2.6
 oauthlib==3.2.2
 onnxruntime==1.22.0
+openai==1.79.0
 opentelemetry-api==1.33.1
 opentelemetry-exporter-otlp-proto-common==1.33.1
 opentelemetry-exporter-otlp-proto-grpc==1.33.1
@@ -108,6 +113,7 @@ starlette==0.45.3
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
+tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
