--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Deprecated==1.2.18
 distro==1.9.0
 durationpy==0.10
 fastapi==0.115.9
+fastjsonschema==2.21.1
 filelock==3.18.0
 flatbuffers==25.2.10
 frozenlist==1.6.0
@@ -43,6 +44,7 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+jupyter_core==5.7.2
 kubernetes==32.0.1
 langchain==0.3.25
 langchain-chroma==0.2.4
@@ -60,6 +62,7 @@ mmh3==5.1.0
 mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
+nbformat==5.10.4
 networkx==3.4.2
 numpy==2.2.6
 oauthlib==3.2.2
@@ -79,6 +82,7 @@ orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
 pillow==11.2.1
+platformdirs==4.3.8
 posthog==4.0.1
 propcache==0.3.1
 protobuf==5.29.4
@@ -117,6 +121,7 @@ tiktoken==0.9.0
 tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.52.1
 typer==0.15.4
 typing-inspect==0.9.0
