--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
+chardet==5.2.0
 charset-normalizer==3.4.2
 chromadb==1.0.9
 click==8.1.8
@@ -24,6 +27,8 @@ filelock==3.18.0
 flatbuffers==25.2.10
 frozenlist==1.6.0
 fsspec==2025.5.0
+gitdb==4.0.12
+GitPython==3.1.44
 google-auth==2.40.1
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
@@ -62,6 +67,7 @@ mmh3==5.1.0
 mpmath==1.3.0
 multidict==6.4.4
 mypy_extensions==1.1.0
+narwhals==1.40.0
 nbformat==5.10.4
 networkx==3.4.2
 numpy==2.2.6
@@ -81,24 +87,29 @@ opentelemetry-util-http==0.54b1
 orjson==3.10.18
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
 pillow==11.2.1
 platformdirs==4.3.8
 posthog==4.0.1
 propcache==0.3.1
 protobuf==5.29.4
+pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
+pydeck==0.9.1
 Pygments==2.19.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 regex==2024.11.6
+reportlab==4.4.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
@@ -111,15 +122,19 @@ scipy==1.15.3
 sentence-transformers==4.1.0
 shellingham==1.5.4
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.45.3
+streamlit==1.45.1
 sympy==1.14.0
 tenacity==9.1.2
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
+toml==0.10.2
 torch==2.7.0
+tornado==6.5
 tqdm==4.67.1
 traitlets==5.14.3
 transformers==4.52.1
@@ -127,9 +142,11 @@ typer==0.15.4
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
+watchdog==6.0.0
 watchfiles==1.0.5
 websocket-client==1.8.0
 websockets==15.0.1
